[package]
name = "vsag-py"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vsag"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
vsag-sys = { git = "https://github.com/jiacai2050/vsag-sys.git", branch = "main" }
