[package]
name = "vsag-py"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
vsag = { version = "0.1", default-features = false }

[features]
default = ["vendored", "enable-cxx11-abi"]
vendored = ["vsag/vendored"]
enable-intel-mkl = ["vsag/enable-intel-mkl"]
enable-libcxx = ["vsag/enable-libcxx"]
enable-cxx11-abi = ["vsag/enable-cxx11-abi"]
